tests/lean/mulcommErrorMessage.lean.expected.out
mulcommErrorMessage.lean:8:13-13:25: error: Type mismatch
  fun a b => ?m
has type
  (a : ?m) → (b : ?m a) → ?m a b
but is expected to have type
  a✝ * b✝ = b✝ * a✝
the following variables have been introduced by the implicit lambda feature
  a✝ : Bool
  b✝ : Bool
you can disable implicit lambdas using `@` or writing a lambda expression with `{}` or `[]` binder annotations.
mulcommErrorMessage.lean:12:22-12:25: error: Type mismatch
  rfl
has type
  ?m = ?m
but is expected to have type
  false = true
mulcommErrorMessage.lean:16:3-17:47: error: Type mismatch
  fun a b => ?m
has type
  (a : ?m) → (b : ?m a) → ?m a b
but is expected to have type
  a✝ * b✝ = b✝ * a✝
the following variables have been introduced by the implicit lambda feature
  a✝ : Bool
  b✝ : Bool
you can disable implicit lambdas using `@` or writing a lambda expression with `{}` or `[]` binder annotations.
mulcommErrorMessage.lean:16:12-17:47: error: failed to elaborate eliminator, expected type is not available
